Fixed the issue 🥲

--- a/project02-04.html
+++ b/project02-04.html
@@ -18,7 +18,8 @@
    <title>Hands-on Project 2-4</title>
    <link rel="stylesheet" href="styles.css" />
    <!--Step 2-->
-   <script src="project2-04.js"></script>
+   <!-- fixed the issue, lord help me, i spent hours on this-->
+   <script src="project02-04.js"></script>
 </head>
 
 <body>
